# aoc-2023

problems/1/: description.txt
problems/19/: description.txt
problems/2/: description.txt
problems/3/: description.txt
problems/4/: description.txt
problems/5/: description.txt
problems/6/: description.txt  input.txt
problems/7/: description.txt
problems/8/: description.txt
rust/: Cargo.toml
rust/p1/: Cargo.toml
rust/p1/src/: main.rs
rust/p19/: Cargo.toml
rust/p19/src/: main.rs
rust/p2/: Cargo.toml
rust/p2/src/: main.rs
rust/p3/: Cargo.toml
rust/p3/src/: main.rs
rust/p4/: Cargo.toml
rust/p4/src/: main.rs
rust/p5/: Cargo.toml
rust/p5/src/: input.rs  main.rs  parser.rs
rust/p6/: Cargo.toml
rust/p6/src/: main.rs
rust/p7/: Cargo.toml
rust/p7/src/: hand.rs  main.rs
rust/p8/: Cargo.toml
rust/p8/src/: main.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs  parse.rs
