[workspace]
members = [
    "utils",
    "p1",
    "p2",
    "p3",
    "p4",
    "p5",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
nom = "7.1.3"
rayon = "1.8.0"
utils = { path = "./utils"}

[workspace.package]
version = "0.1.0"
authors = ["Scott Sanderson"]
edition = "2021"
