[workspace]
members = [
    "utils",
    "p1",
    "p2",
    "p3",
    "p4",
    "p5",
    "p6",
    "p7",
    "p8",
    "p19",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
nom = "7.1.3"
rayon = "1.8.0"
utils = { path = "./utils"}
enum-map = "2.7.3"
num = "0.4.1"

[workspace.package]
version = "0.1.0"
authors = ["Scott Sanderson"]
edition = "2021"
