[package]
name = "p5"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
nom.workspace = true
rayon.workspace = true
regex.workspace = true
utils.workspace = true
